--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "mdb-react-ui-kit": "^1.0.0-beta2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-graph-vis": "^1.0.7",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-vis": "^1.11.7",
+    "vis-network": "^9.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
